enable auto-restart

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-#
+# DATA volume
 VOLUMES_ROOT_PATH=/data/zabbix
 
 # Variables to initialize the MySQL database instance.
 MYSQL_DATABASE=zabbix
 MYSQL_USER=zabbix
 MYSQL_PASSWORD=zabbix
-MYSQL_ROOT_PASSWORD=zabbix
+MYSQL_ROOT_PASSWORD=root
 
 DB_SERVER_HOST=mysql-server
 
