adjust data patch

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # DATA volume
-VOLUMES_ROOT_PATH=/data/zabbix
+VOLUMES_ROOT_PATH=./data
 
 # Variables to initialize the MySQL database instance.
 MYSQL_DATABASE=zabbix
